# loomis

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.example.toml  install.ps1  install.sh
backend/: README.md  pyproject.toml
backend/src/loomis/: __init__.py  api.py  app.py  backup.py  classify.py  cli.py  config.py  daemon.py  db.py  devicefile.py  diarize.py  jobs.py  launcher.py  llm.py  logging_setup.py  models.py  pipeline.py  repository.py  scheduler.py  schemas.py  speakerid.py  storage.py  stt.py  summarize.py  transcode.py  watcher.py
backend/src/loomis/api/: __init__.py  app.py  routes.py  schemas.py
backend/src/loomis/cloud/: __init__.py  rclone.py  sync.py
backend/src/loomis/core/: __init__.py  config.py  db.py  errors.py  events.py  models.py  repository.py  sqlite_tx.py  storage.py  vectors.py
backend/src/loomis/ingest/: __init__.py  backup.py  devicefile.py
backend/src/loomis/pipeline/: __init__.py  classify.py  diarize.py  llm.py  runner.py  speakerid.py  steps.py  stt.py  summarize.py  transcode.py
backend/tests/: conftest.py  test_api.py  test_backup.py  test_cloud_sync.py  test_commands.py  test_daemon.py  test_db.py  test_events.py  test_folder_sources.py  test_health.py  test_integrity_resume.py  test_jobs.py  test_pipeline.py  test_records_pipeline.py  test_registration.py  test_scheduler.py  test_settings_api.py  test_speakerid.py  test_summaries.py  test_transcode_ffmpeg.py  test_watcher.py  test_ws.py
docs/: 01-vision-and-scope.md  02-user-flows.md  03-requirements-specification.md  04-system-architecture.md  05-data-model-and-storage.md  06-configuration.md  07-ui-ux-design.md  08-roadmap-and-milestones.md  09-security-and-privacy-model.md  10-glossary.md  11-api-specification.md  README.md
docs/adr/: 0001-record-architecture-decisions.md  0002-stt-engine-whisperx.md  0003-frontend-vue-spa.md  0004-cloud-backup-rclone.md  0005-llm-provider-abstraction.md  0006-database-sqlite.md  0007-speaker-diarization-pyannote.md  0008-audio-compression-opus.md  0009-device-registration-format.md  0010-python-tooling.md  0011-usb-device-detection.md  0012-folder-sources.md  0013-transcode-by-default.md  README.md
docs/features/: 01-device-registration-and-backup.md  02-audio-compression.md  03-transcription.md  04-speaker-diarization-and-identification.md  05-summarization-and-organization.md  06-cloud-sync.md
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.mts
web/src/: App.vue
web/src/pages/: Devices.vue  Diary.vue  Jobs.vue  Meeting.vue  Recording.vue  Records.vue  Search.vue  Settings.vue  Speakers.vue  Timeline.vue  index.vue
web/src/router/: index.ts
web/src/services/: api.ts
web/src/stores/: events.ts  health.ts
