# Loomis backend — Python project metadata and tooling.
# See ../docs/adr/0010-python-tooling.md (uv + ruff + mypy) and
# ../docs/04-system-architecture.md §12 (repo layout).

[project]
name = "loomis"
version = "0.0.0"
description = "Local-first voice lifelogger: auto-backup, transcribe, diarize, and summarize recordings."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../LICENSE" }
authors = [{ name = "kevin" }]
keywords = ["lifelog", "transcription", "diarization", "whisper", "local-first", "voice"]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
]

[project.optional-dependencies]
# Heavy/feature deps land here as milestones arrive, to keep the base lean.
stt   = []            # whisperx etc.            (ADR-0002 / 0007)  — M2/M3
llm   = ["httpx>=0.27"]  # provider HTTP         (ADR-0005)         — M4
cloud = []            # rclone is an external binary, not a dep     (ADR-0004)
gpu   = []            # CUDA-specific extras
windows = []          # pywin32 for native USB events (ADR-0011)

[project.scripts]
loomis = "loomis.cli:main"

[project.urls]
Documentation = "https://github.com/kevin/loomis/tree/main/docs"
Source        = "https://github.com/kevin/loomis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loomis"]

# ── Dev toolchain (managed by uv) ───────────────────────────────────────
[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-cov>=5",
  "httpx>=0.27",        # required by starlette TestClient
]

# ── Ruff: lint + format ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]   # incl. isort, pyupgrade, bugbear, bandit-ish
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # allow assert in tests

# ── mypy: strict typing ─────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
mypy_path = "src"

# ── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

# ── coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["loomis"]
