# Loomis backend — Python project metadata and tooling.
# See ../docs/adr/0010-python-tooling.md (uv + ruff + mypy) and
# ../docs/04-system-architecture.md §12 (repo layout).

[project]
name = "loomis"
version = "0.0.0"
description = "Local-first voice lifelogger: auto-backup, transcribe, diarize, and summarize recordings."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../LICENSE" }
authors = [{ name = "kevin" }]
keywords = ["lifelog", "transcription", "diarization", "whisper", "local-first", "voice"]

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "psutil>=5.9",          # removable-volume detection (ADR-0011)
]

[project.optional-dependencies]
# Heavy/feature deps land here as milestones arrive, to keep the base lean.
stt   = ["whisperx>=3.1"]  # WhisperX (pulls torch) (ADR-0002)        — M2 (opt-in)
llm   = ["httpx>=0.27"]  # provider HTTP         (ADR-0005)         — M4
cloud = []            # rclone is an external binary, not a dep     (ADR-0004)
gpu   = []            # CUDA-specific extras
windows = []          # pywin32 for native USB events (ADR-0011)

[project.scripts]
loomis = "loomis.cli:main"

[project.urls]
Documentation = "https://github.com/kevin/loomis/tree/main/docs"
Source        = "https://github.com/kevin/loomis"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loomis"]

# ── Dev toolchain (managed by uv) ───────────────────────────────────────
[dependency-groups]
dev = [
  "ruff>=0.6",
  "mypy>=1.11",
  "pytest>=8",
  "pytest-cov>=5",
  "httpx>=0.27",        # required by starlette TestClient
  "types-psutil>=5.9",  # mypy stubs for the device watcher
]

# ── Ruff: lint + format ─────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "S"]   # incl. isort, pyupgrade, bugbear, bandit-ish
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]   # allow assert in tests
# Launcher orchestrates child processes: subprocess with controlled argv (S603/S607),
# assert for stdout type-narrowing (S101), and a host-string compare that is not a
# bind (S104) are all intentional here.
"src/loomis/launcher.py" = ["S101", "S104", "S603", "S607"]

# ── mypy: strict typing ─────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
mypy_path = "src"

# The launcher branches on sys.platform; mypy fixes one platform, so the other
# platform's process-control branch is statically unreachable. That is correct
# and intentional — don't warn about it here.
[[tool.mypy.overrides]]
module = "loomis.launcher"
warn_unreachable = false

# ── pytest ──────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

# ── coverage ────────────────────────────────────────────────────────────
[tool.coverage.run]
branch = true
source = ["loomis"]
